fixed overflows

--- a/src/sections/hero/hero.module.css
+++ b/src/sections/hero/hero.module.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
+    overflow: visible;
 }
 
 .hero-info-heading {
@@ -20,6 +21,7 @@
     line-height: 42px;
     letter-spacing: 0em;
     text-align: left;
+    overflow: visible;
 }
 
 .hero-info-desc {
@@ -30,6 +32,7 @@
     letter-spacing: 0em;
     text-align: left;
     margin: 32px 0 24px;
+    overflow: visible;
 }
 
 .hero-images {
@@ -73,6 +76,7 @@
     justify-content: flex-start;
     background-color: #282c33;
     z-index: 3;
+    overflow: visible;
 }
 
 .hero-quote-ind {
